Fixing designer overflow behaviors

--- a/aire-core/src/main/scss/aire/components/designer/aire-designer.scss
+++ b/aire-core/src/main/scss/aire/components/designer/aire-designer.scss
@@ -3,9 +3,8 @@ aire-designer {
   display:block;
   z-index: 0;
   overflow:auto;
+  flex:1;
   position: absolute;
-  top:40;
-  bottom: 0;
   left:0;
   right:0;
 
