--- a/aire-core/src/main/scss/aire/components/designer/aire-palette.scss
+++ b/aire-core/src/main/scss/aire/components/designer/aire-palette.scss
@@ -2,5 +2,4 @@ aire-palette {
   display:block;
   width:100%;
   min-height:40px;
-  border: 1px solid red;
 }
